# dataton2014peru

./: .gitignore  README.md  app.py  pyproject.toml
Interrupciones_sunass/: interrupciones.ipynb  interrupciones.qmd  interrupciones_r.qmd
Interrupciones_sunass/data/: dep_peru.dbf  dep_peru.shp  dep_peru.shx
