[tool.poetry]
name = "dataton2014peru"
version = "0.1.0"
description = ""
authors = ["tjhon <fr.jhonk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
geopandas = "^1.0.1"
streamlit = "^1.38.0"
plotly = "^5.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
